--- a/pagina.html
+++ b/pagina.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Una clase acerca de git y control de versiones</h1>
-        <p style="font-style: italic;">¿Que vamos a ver en esta clase?</p>
+        <p style="font-style: italic; color: brown; font-weight: bolder;">¿Que vamos a ver en esta clase?</p>
         <ul>
             <li>Entender que es Github y servicios similares</li>
             <li>Crear un repositorio en Github</li>
