--- a/Clases/Clase 3/pagina.html
+++ b/Clases/Clase 3/pagina.html
@@ -5,11 +5,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
     </head>
     <body>
         <h1>Una clase acerca de git y control de versiones</h1>
-        <p>¿Que vamos a ver en esta clase?</p>
+        <p style="font-style: italic; color: brown; font-weight: bolder;">¿Que vamos a ver en esta clase?</p>
         <ul>
             <li>Entender que es Github y servicios similares</li>
             <li>Crear un repositorio en Github</li>
