--- a/Clases/Clase 3/actividad_1_2.html
+++ b/Clases/Clase 3/actividad_1_2.html
@@ -19,11 +19,11 @@
         <h2 align="center">NUESTRAS SECCIONES DE AYUDA</h2>
         <div>
             <p style="display: inline;"><img src="https://w7.pngwing.com/pngs/279/812/png-transparent-cute-poodle-animal-puppy-pet.png" alt="Perrito" width="300px" height="300px"></p>
-            <p style="vertical-align:middle; display: inline;"><a href="">Perros</a></p>
+            <p style="vertical-align:middle; display: inline;"><a href="perro.html">Perros</a></p>
         </div>
         <div>
             <p style="display: inline;"><img src="https://i.pinimg.com/736x/e2/f2/7d/e2f27dcc200c34ffe3a29e99e8016523.jpg" alt="Perrito" width="300px" height="300px"></p>
-            <p style="vertical-align:middle; display: inline;"><a href="">Gatos</a></p>
+            <p style="vertical-align:middle; display: inline;"><a href="gatos.html">Gatos</a></p>
         </div>
     </body>
 </html>
