--- a/Clases/Clase 3/gatos.html
+++ b/Clases/Clase 3/gatos.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <h1 align="center">GATOS EN ADOPCION</h1>
+        <p align="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lacus sed turpis tincidunt id aliquet. Nisl vel pretium lectus quam. Ullamcorper sit amet risus nullam eget felis. Facilisis gravida neque convallis a cras semper auctor neque. Lectus urna duis convallis convallis tellus id interdum. In ornare quam viverra orci sagittis eu. Enim diam vulputate ut pharetra sit amet aliquam id. Consectetur adipiscing elit duis tristique sollicitudin. Nisl condimentum id venenatis a. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Dapibus ultrices in iaculis nunc. Porttitor eget dolor morbi non arcu risus.</p>
+
         <div>
-            <p style="display: inline;"><img src="https://i.pinimg.com/736x/e2/f2/7d/e2f27dcc200c34ffe3a29e99e8016523.jpg" alt="Perrito" width="300px" height="300px"></p>
-            <p style="vertical-align:middle; display: inline;"><a href="">Gatos</a></p>
+            <p style="display: inline;"><img src="https://i.pinimg.com/736x/e2/f2/7d/e2f27dcc200c34ffe3a29e99e8016523.jpg" alt="Perrito" width="120" height="120"></p>
+            <p style="vertical-align:middle; display: inline;"><a href="">Gato 1</a></p>
+        </div>
+        <div>
+            <p style="display: inline;"><img src="https://i.pinimg.com/736x/e2/f2/7d/e2f27dcc200c34ffe3a29e99e8016523.jpg" alt="Perrito" width="120" height="120"></p>
+            <p style="vertical-align:middle; display: inline;"><a href="">Gato 2</a></p>
+        </div>
+        <div>
+            <p style="display: inline;"><img src="https://i.pinimg.com/736x/e2/f2/7d/e2f27dcc200c34ffe3a29e99e8016523.jpg" alt="Perrito" width="120" height="120"></p>
+            <p style="vertical-align:middle; display: inline;"><a href="">Gato 3</a></p>
         </div>
     </body>
 </html>
