--- a/Clases/Clase 4/Actividad4.html
+++ b/Clases/Clase 4/Actividad4.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             body{
-                background-color: burlywood;
+                background-color: rgb(238, 214, 184);
             }
             h1{
                 color: darkcyan;
