Clase 5 - Terminando clase 4

--- a/Clases/Clase 4/AyudaPeludosStyle.html
+++ b/Clases/Clase 4/AyudaPeludosStyle.html
@@ -5,41 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <style>
-            body{
-                background-color: rgb(54, 54, 54);
-                font-family: sans-serif;
-            }
-            #container{
-                display: flex;
-                height: 100%;
-            }
-            #sidebar{
-                padding-top: 50px;
-                width: 20%;
-                border: 1px solid white;
-            }
-            .sidebar-content{
-                color: rgb(206, 206, 206);
-                text-align: left;
-                padding-left: 20px;
-                margin-block: 5px;
-            }
-            #color-blocks-panel{
-                width: 80%;
-                height: 100%;
-                display: flex;
-                flex-wrap: wrap;
-                border: 1px solid white;
-            }
-            .color-blocks{
-                margin: 0px;
-                height: 25%;
-                width: 100%;
-                border: 1px solid red;
-                display: inline-block;
-            }
-        </style>
+        <link rel="stylesheet" href="StyleMain.css">
+
     </head>
     <body>
         <script>
@@ -50,11 +17,11 @@
         <div id="container">
             <div id="sidebar">
                 <h1 class="sidebar-content">Peludos</h1>
-                <p class="sidebar-content">Inicio</p>
-                <p class="sidebar-content">Nosotros</p>
-                <p class="sidebar-content">Perros</p>
-                <p class="sidebar-content">Gatos</p>
-                <p class="sidebar-content">Contacto</p>
+                <p><a class="sidebar-content" href="" style="text-decoration: none;">Inicio</a></p>
+                <p><a class="sidebar-content" href="" style="text-decoration: none;">Nosotros</a></p>
+                <p><a class="sidebar-content" href="" style="text-decoration: none;">Perros</a></p>
+                <p><a class="sidebar-content" href="" style="text-decoration: none;">Gatos</a></p>
+                <p><a class="sidebar-content" href="" style="text-decoration: none;">Contacto</a></p>
             </div>
             <div id="color-blocks-panel">
                 <div class="color-blocks" style="background-color: cyan;">
