--- a/Clases/Clase 4/inicio.html
+++ b/Clases/Clase 4/inicio.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="StyleMain.css">
+        <link rel="stylesheet" href="styleInicio.css">
 
     </head>
     <body>
@@ -17,9 +17,9 @@
         <div id="container">
             <div id="sidebar">
                 <h1 class="sidebar-content">Peludos</h1>
-                <p><a class="sidebar-content" href="" style="text-decoration: none;">Inicio</a></p>
-                <p><a class="sidebar-content" href="" style="text-decoration: none;">Nosotros</a></p>
-                <p><a class="sidebar-content" href="" style="text-decoration: none;">Perros</a></p>
+                <p><a class="sidebar-content" href="inicio.html" style="text-decoration: none;">Inicio</a></p>
+                <p><a class="sidebar-content" href="nosotros.html" style="text-decoration: none;">Nosotros</a></p>
+                <p><a class="sidebar-content" href="perros.html" style="text-decoration: none;">Perros</a></p>
                 <p><a class="sidebar-content" href="" style="text-decoration: none;">Gatos</a></p>
                 <p><a class="sidebar-content" href="" style="text-decoration: none;">Contacto</a></p>
             </div>
