--- a/Clases/Clase 4/Nosotros.html
+++ b/Clases/Clase 4/Nosotros.html
@@ -14,8 +14,7 @@
                 <p><a class="sidebar-content" href="inicio.html" style="text-decoration: none;">Inicio</a></p>
                 <p><a class="sidebar-content" href="nosotros.html" style="text-decoration: none;">Nosotros</a></p>
                 <p><a class="sidebar-content" href="perros.html" style="text-decoration: none;">Perros</a></p>
-                <p><a class="sidebar-content" href="" style="text-decoration: none;">Gatos</a></p>
-                <p><a class="sidebar-content" href="" style="text-decoration: none;">Contacto</a></p>
+                <p><a class="sidebar-content" href="gatos.html" style="text-decoration: none;">Gatos</a></p>
             </div>
             <div id="color-blocks-panel">
                 <div class="article-block">
