--- a/Clases/Clase 2_1/index.html
+++ b/Clases/Clase 2_1/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
     <form>
         <fieldset style="border: 1px solid black;">
+            <legend>Datos basicos</legend>
             <label for="inputNombre">Nombre: </label>
             <input type="text" name="nombre" placeholder="Ingresa tu nombre" id="inputNombre">
             <label for="inputEmail">Email: </label>
@@ -25,7 +26,8 @@
                 <label class="form-check-label" for="flexRadioDefault2">Femenino</label>
             </div>
         </fieldset>
-        <fieldset style="border: 1px solid black;">
+        <fieldset>
+            <legend>Datos opcionales</legend>
             <label for="alimento">Seleccione un alimento: </label>
             <br>
             <select name="alimento" id="rainbow" size="4">
@@ -39,9 +41,9 @@
                 </optgroup>
             </select>
             <br><br>
-            <label>Cuetanos de ti</label>
+            <label>Cuentanos de ti</label>
             <br>
-            <textarea cols="20" rows="10"></textarea>
+            <textarea cols="100" rows="10"></textarea>
         </fieldset>
     </form>
 
