--- a/Clases/Clase 2_4/index.html
+++ b/Clases/Clase 2_4/index.html
@@ -6,12 +6,31 @@
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script>
+        $(document).ready(function(){
+            $.ajax({
+                type: "GET",
+                url: "https://mindicador.cl/api",
+                dataType: "json",
+                success: function(data){
+                    var uf = "<h1> UF: "+data.uf.valor+"</h1>";
+                    var bitcoin = "<h1> BITCOIN: " + data.bitcoin.valor+"</h1>";
+
+                    $("#divisas").append(uf);
+                    $("#divisas").append(bitcoin);
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <div>
        <input type="submit" id="enviar" class="btn-primary" value="Traer Datos">
+    </div>
+    <div id="divisas">
+        
     </div>
     <div>
         <table id="datos" class="table table-bordered" style="border: 1px solid black;">
@@ -23,6 +42,8 @@
         </table>
     </div>
     <script>
+        
+
         $("#enviar").click(function(){
             $.get("https://www.themealdb.com/api/json/v1/1/categories.php",
             function(data){
